--- a/assets/custom.css
+++ b/assets/custom.css
@@ -6,8 +6,17 @@
 body.article  header.page-width.page-width--narrow.scroll-trigger.animate--fade-in * {
     color: #000;
 }
-
-
+.body_text * { color: #000; }
+.top_text {
+    text-align: center;
+    max-width: 709px;
+    margin: auto;
+    padding-top: 25px;
+}.top_text { padding-left: 20px; padding-right: 20px; }
+.body_collection  h2 { margin-bottom: 17px; }
+.body_collection .more_txt {
+    padding-top: 44px;
+}
 body.article  .article-template__content * {
     color: #000;
 }
@@ -4104,6 +4113,30 @@ a.bg-color.disable {
     
 }
 @media screen and (min-width:767px){
+details[open]>.header__submenu summary.header__menu-item.link.link--text.list-menu__item svg.icon.icon-caret {
+    transform: rotate(-90deg) !Important;
+}
+  ul.header__submenu.list-menu>li ul.header__submenu.list-menu.motion-reduce {
+    position: absolute;
+    right: auto;
+    background: #121212;
+    top: 10px;
+    left: 100%;
+    width: fit-content;
+    min-width: 204px;
+}
+details[open]>.header__submenu {
+    
+    margin-top: -13px !important;
+}
+
+ul.header__submenu.list-menu>li {
+    position: relative;
+}
+  .dyna-performance-banner-text p{
+    max-width:54% !Important;
+  }
+  .template-article .article-template__content.page-width.page-width--narrow { max-width: 77%; }
 button.hulkapps_discount_button.btn.btn--primary.button {
     width: 29%;
     min-width: auto;
