--- a/sections/exploring-blog.liquid
+++ b/sections/exploring-blog.liquid
@@ -41,7 +41,10 @@
 
 <style>
   .dyna-performance-card img {
-    max-width: 100%;
+      max-width: 100%;
+    height: 300px;
+    object-fit: cover;
+    width: 100%;
 }
   /* blog page css starts */
         .exploring-blog-wrapper {
